argocd/mealie/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mealie
  name: mealie
spec:
  ports:
    - name: "http"
      port: 9000
      targetPort: 9000
  selector:
    app: mealie
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  ports:
    - name: "postgres"
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
