argocd/mealie/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Mealie
    gethomepage.dev/icon: mealie
    gethomepage.dev/description: "Mealie is an intuitive and easy to use recipe management\
      \ app."
    gethomepage.dev/pod-selector: app=mealie
  labels:
    app.kubernetes.io/instance: mealie-app
  name: mealie-httproute
  namespace: mealie
spec:
  parentRefs:
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - mealie.yanello.net
  rules:
    - backendRefs:
        - name: mealie
          namespace: mealie
          port: 9000
