argocd/mealie/manifests/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mealie-vs
spec:
  hosts:
  - mealie.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: mealie
        port:
          number: 9000
