argocd/mealie/manifests/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mealie
spec:
  endpointSelector:
    matchLabels:
      app: mealie
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mealie
            app: postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toCIDR:
        - 10.10.8.0/22
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mealie-db
spec:
  endpointSelector:
    matchLabels:
      app: postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mealie
            app: mealie
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  egressDeny:
    - toEntities:
        - world
